<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.auth.fragments.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!-- Logo -->
                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="140dp"
                    android:layout_marginVertical="30dp"
                    android:src="@drawable/logo_white" />

                <!-- Full Name -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/full_name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp" />

                <!-- Phone -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/mobile_number"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/enter_your_mobile_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp" />

                <!-- Email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email_address"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp" />

                <!-- Password -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/your_password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp" />

                <!-- Confirm Password -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/password_confirmation"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/edit_text_rounded"
                    android:hint="@string/password_confirmation"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:padding="18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp" />

                <!-- Already have account -->
                <TextView
                    android:id="@+id/tvLoginInstead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/g_do_you_have_an_account_sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <!-- Register Button -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit_text_rounded"
                    android:padding="18dp">

                    <TextView
                        android:id="@+id/tvBtnRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sign_up"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/icNext"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/ic_next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="30dp"
                        android:indeterminateTint="@color/blue"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
