<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.e_commerce.ui.activities.home.fragment.account.AccountViewModel" />
        <variable
            name="lifecycleOwner"
            type="androidx.lifecycle.LifecycleOwner" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.home.fragment.account.AccountDetailsFragment">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activities.home.fragment.account.AccountDetailsFragment">

            <ImageView
                android:id="@+id/route_logo_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_route_logo"
                android:padding="16dp"
                />
            <LinearLayout
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="17dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/welcome_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Welcome, Mohamed"
                    app:layout_constraintTop_toBottomOf="@id/route_logo_imageview"
                    android:layout_marginTop="35dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="mohamed.N@gmail.com"
                    app:layout_constraintTop_toBottomOf="@id/welcome_user"
                    android:textSize="17dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/blue"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/your_full_name"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    />
                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edit_text_details"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    android:drawableEnd="@drawable/edit_icon_size"
                    android:text='@={viewModel.name}'
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/your_email"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    />
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_details"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    android:drawableEnd="@drawable/edit_icon_size"
                    android:text='@={viewModel.email}'
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/your_password"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    />
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_details"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    android:drawableEnd="@drawable/edit_icon_size"
                    android:text='@={viewModel.password}'
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/your_mobile_number"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    />
                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_details"
                    android:hint="@string/phone_num"
                    android:inputType="phone"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    android:drawableEnd="@drawable/edit_icon_size"
                    android:text='@={viewModel.phone}'
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/your_address"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    />
                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_text_details"
                    android:hint="@string/masr_el_gdeda_street_9"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_110"
                    android:textSize="14sp"
                    android:drawableEnd="@drawable/edit_icon_size"
                    android:text='@={viewModel.address}'
                    />
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/blue"
                    android:textColor="@color/white" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</layout>
