<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.e_commerce.ui.activities.auth.fragments.forgetPassword.ViewModelForgetPassword" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.auth.fragments.forgetPassword.ForgetPasswordFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_outside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="15dp">

                    <!-- Logo -->
                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="140dp"
                        android:layout_marginVertical="30dp"
                        android:src="@drawable/logo_white" />

                    <!-- Welcome -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/welcome_Back_to_route"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Sign-in hint -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/sign_in_with_your_mail"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <!-- Email label -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/email_address"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <!-- Email input -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{vm.emailError}">

                        <EditText
                            android:id="@+id/email_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/edit_text_rounded"
                            android:fontFamily="@font/poppins_regular"
                            android:hint="@string/enter_your_email"
                            android:inputType="textEmailAddress"
                            android:maxLength="40"
                            android:padding="18dp"
                            android:text="@={vm.emailLiveData}"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_110"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Send password button -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/edit_text_rounded"
                        android:onClick="@{() -> vm.sendPassword()}"
                        android:padding="18dp">

                        <TextView
                            android:id="@+id/btn_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/send_password"
                            android:textColor="@color/blue"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ic_next"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/ic_next"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ProgressBar
                            android:id="@+id/progress_bar"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="30dp"
                            android:indeterminateTint="@color/blue"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>
